[package]
name = "grafbase-rudderstack"
version = "1.1.2"
edition = "2021"
readme = "README.md"
description = "The RudderStack Rust SDK is an analytics client to track events from your Rust application"
license = "MIT"
repository = "https://github.com/grafbase/grafbase-rudderstack"


[dependencies]
reqwest = { version = "0.11", default-features = false, features = [
    'json',
    'blocking',
] }
log = "0.4"
env_logger = "0.10"
thiserror = "1"
serde_with = "3"
ijson = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }


[features]
default = ["default-tls"]
default-tls = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]
